# introspect

./: ARCHIVE  INTROSPECTION  any_function.hpp  archive.hpp  archive_new.hpp  as_tuple.cc  as_tuple.cpp  as_tuple.hpp  byteswap.hpp  introspect.cc  introspect.hh  invoke.cc  junk.cc  main.cpp  map.cpp  spectre.hh  tuple_fold.hpp  tuple_from_json.hpp  tuple_to_json.hpp  uncurry.hpp  xdr.hpp
as_tuple/: as_tuple.hpp  sizeof.hpp  std.hpp
gccplugin/: CMakeLists.txt  DESIGN  Makefile  TREE  foo.cpp  reflection.c  reflection.cpp
gccplugin/tests/: foo.cpp
